# dnd

./: .gitignore  CMakeLists.txt  README.md
src/: dnd.cpp
ui/: dice.ui  dnd.ui
