PROJECT(dnd CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)

SET(CXX_DBG "-g")
SET(CXX_FLG "--warn-unused-variable -unknown-pragmas -Wall -Werror")
SET(CXX_THD "-pthread")
SET(CXX_OPT "-Ofast")
LIST(APPEND CMAKE_CXX_FLAGS "${CXX_DBG} ${CXX_FLAG} ${CXX_THD} ${CXX_OPT}")

if (MSVC)
elseif(APPLE)
else(LINUX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wextra")
endif()

# Add other flags to the compiler
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

ADD_EXECUTABLE(dnd src/dnd.cpp)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
INCLUDE_DIRECTORIES(
    PUBLIC
        $<BUILD_INTERFACE:${GTK3_INCLUDE_DIRS}>
)

LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(dnd ${GTK3_LIBRARIES})

# PHONY TARGETS
ADD_CUSTOM_TARGET(run ./dnd)
ADD_CUSTOM_TARGET(memcheck memcheck ./dnd)
